	  now removeFile(), getTmpDir() and getTmpFile().
	* FireGPG_GPG.putIntoFile() and FireGPG_GPG.getFromFile()
	  are moved to misc.js. There names are now putIntoFile()
	  and getFromFile().
	* FireGPG_GPG.runCommand() is moved to misc.js. The new name
	  is runCommand().
	* new dialog to enter the private key password.
	* new function getPassword() to get the private key password.

2007-03-04  Maximilien Cuony
	* Some modification for errors of improvements of code's style
	* Re-Implementation of firegpgGPG.listkey(private)
	* List key in option dialog show only private keys now
	* Add implementation for show the option dialog with the menu
	* Class cselect : can now get the selection of texts (not textarea or input)
	* Fix an error in the popup system
	* Class select : getSelection work !
	* Class select : isSelectionEdit implemented
	* Class select : setSelection implemented
	* Class select is finished !
	* Add menu incons (all with GPL's liscence)
	* cgpg : crypt and dcrypt added
	* Add fr locate
	* Add base menu's icone
	* Add comment 'http://firegpg.tuxfamily.org' for signs and crypts
	* Update URL link
	* UUID change to 89c87b67-c98f-4caf-ac0f-f80076b895ea (not useful, but changed when I test update's system)

2007-03-03  Maximilien Cuony
	* Implementation of firegpgGPG.listkey(private)
	* Moved some function to firegpgGPG
	* FireGPG context menu added
	* Basic functions for GPGLin.Sign and GPGLin.Verif
	* Basic classes and functions for using GPG added 
	  (sample don't work for the moment)

2007-03-03  Achraf cherti
	* little modification in linux.sh (comments), linux.sh 
	  renamed to run.sh
	* GMail CheckBox in "options" dialog
	* somes improvements in the style of the code of *.js
	* unification of the prototypes and classes name
	* private key listbox added to options dialog
	* tmp files permission is now 0600
	* class* renamed to c*
	* classfirefoxgpg.js renamed to misc.js

2007-03-02  Achraf cherti
	* template generated with the wizard