@@ -6,11 +6,12 @@ Tâches libres :
 	  accessible en écriture. [->Achraf ?]
 
 Tâches de Maximilien :
-        - fonction pour chiffrer un texte. (finir)
-        - fonction pour déchiffrer un texte. (finir)
-        - fonction pour signer un texte. (finir)
-        - fonction pour tester la signature d'un texte. (finir)
+	- fonction pour chiffrer un texte. (finir)
+	- fonction pour déchiffrer un texte. (finir)
+	- fonction pour signer un texte. (finir)
+	- fonction pour tester la signature d'un texte. (finir)
 
 Tâches d'Achraf :
 	- Boite de dialogue pour sélectionner la clé publique
 	- option pour activer/désactiver la pub du site de FireGPG
+	- i18n dans l'alert de password.js
